# adapta-midnight

./: .gitignore  Makefile.am  README.md  configure.ac
extra/: Makefile.am
extra/telegram/light/: colors.tdesktop-theme
extra/tweetdeck/: recolor-cdk.sh
gtk/: Makefile.am  index.theme-midnight-eta  index.theme-nokto
gtk/sass/: compile-gresource.sh  parse-sass.sh
shell/: Makefile.am
shell/asset/: clone-assets-cinnamon.sh  clone-assets-gnome-shell.sh  render-assets-cinnamon-thumb.sh
shell/sass/: compile-gresource.sh  parse-sass.sh
wm/: Makefile.am
wm/openbox-3/: recolor-openbox.sh
